transportar first draft
